#SUM-44: Alignments fix in cart

--- a/src/App.css
+++ b/src/App.css
@@ -70,11 +70,11 @@
 }
 
 .totalCartPrice{
-    margin:-26px 0px 5px -24px;
-    top:0px;
-    left:0px;
+    margin: -24px 0px 10px -22px;
+    top: 0px;
+    left: 0px;
     background-color: wheat;
-    padding-top: 10px;
+    padding: 15px 10px 10px 20px;
     width: 115%;
     height: 50px;
 }
@@ -95,6 +95,7 @@
     background-color: whitesmoke;
     height:600px;
 }
+
 .cartProduct{
     float: left;
     width:60% ;
@@ -215,6 +216,9 @@
 
 .cartItems{
     display: flex;
+    padding: 0px;
+    margin-top: 0px;
+    min-height: 100px;
 }
 
 .cardFunc{
